fixed testimonials jump

--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ section.callaction {
 	padding-top: 5em;
 }
 
-#flavours {
+#Testimonials {
 	padding-top: 5em;
 }
 
